--- a/frontend/app/views/spree/products/_color_option_type.html.erb
+++ b/frontend/app/views/spree/products/_color_option_type.html.erb
@@ -13,7 +13,7 @@
             class: "product-variants-variant-values-radio",
             data: {
               "option-type-index" => index,
-              "presentation" => option_value[:presentation].downcase,
+              "presentation" => option_value[:presentation],
               "variant-id" => option_value[:variant_id],
               "is-color" => true
             }
