--- a/frontend/app/assets/stylesheets/spree/frontend/flags/_flag-icon-base.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/flags/_flag-icon-base.scss
@@ -10,14 +10,14 @@
   display: inline-block;
   width: (4 / 3) * 2.3em;
   &:before {
-    content: '\00a0';
+    content: "\00a0";
   }
 }
 
 @mixin flag-icon($country) {
   .flag-icon-#{$country} {
-    background-image: url(asset-path("#{$flag-icon-css-path}#{$flag-icon-rect-path}/#{$country}.svg"));
-
-    // background-image: url(#{$flag-icon-css-path}#{$flag-icon-rect-path}/#{$country}.svg);
+    background-image: image-url(
+      "#{$flag-icon-css-path}#{$flag-icon-rect-path}/#{$country}.svg"
+    );
   }
 }
