--- a/backend/app/views/spree/admin/product_properties/index.html.erb
+++ b/backend/app/views/spree/admin/product_properties/index.html.erb
@@ -25,6 +25,7 @@
         <tr data-hook="product_properties_header">
           <th colspan="2"><%= Spree.t(:property) %></th>
           <th><%= Spree.t(:value) %></th>
+          <th><%= Spree.t(:show_property) %></th>
           <th class="actions"></th>
         </tr>
       </thead>
