--- a/frontend/app/views/spree/products/_properties.html.erb
+++ b/frontend/app/views/spree/products/_properties.html.erb
@@ -2,7 +2,7 @@
   <h3 class="pt-4 font-weight-bold text-uppercase product-details-subtitle"><%= Spree.t(:details) %></h3>
   <ul id="product-properties" class="m-0 list-unstyled product-properies" data-hook>
     <% @product_properties.each do |product_property| %>
-      <% if product_property.show_property %>
+      <% if product_property.show_property? %>
         <li>
           <span class="font-weight-bold text-break"><%= product_property.property.presentation %>:</span>
           <span class="text-break"><%= product_property.value %></span>
