--- a/frontend/app/views/spree/shared/_mobile_change_store.html.erb
+++ b/frontend/app/views/spree/shared/_mobile_change_store.html.erb
@@ -21,7 +21,7 @@
           <span class="flag-icon flag-icon-<%= store_country_iso(store) %>"></span>
           <%= link_to "//#{store.url}", class: 'dropdown-item text-uppercase d-flex' do %>
             <span><%= store.default_country&.name %></span>
-            <span class="text-right w-100"><%= store_currency_symbol(store.default_currency) %></span>
+            <span class="text-right w-100"><%= store_currency_symbol(store) %></span>
           <% end %>
         </li>
     <% end %>
