WCAG-5 Add aria-label attr to search input

--- a/frontend/app/views/spree/shared/_search.html.erb
+++ b/frontend/app/views/spree/shared/_search.html.erb
@@ -3,6 +3,7 @@
                        params[:keywords],
                        placeholder: Spree.t(:search),
                        autofocus: true,
+                       'aria-label': Spree.t(:search),
                        class: " border-0 p-3"
   %>
   <label class="m-0">
