WCAG-8 Add title attr to search field

--- a/frontend/app/views/spree/shared/_search.html.erb
+++ b/frontend/app/views/spree/shared/_search.html.erb
@@ -2,6 +2,7 @@
   <%= search_field_tag :keywords,
                        params[:keywords],
                        placeholder: Spree.t(:search),
+                       title: Spree.t(:search),
                        autofocus: true,
                        class: " border-0 p-3"
   %>
