--- a/frontend/app/views/spree/shared/_main_nav_bar.html.erb
+++ b/frontend/app/views/spree/shared/_main_nav_bar.html.erb
@@ -1,10 +1,11 @@
 <% if spree_navigation_data.any? %>
   <ul class="nav h-100 main-nav-bar">
     <% spree_navigation_data.each do |root| %>
-      <li class="navbar main-nav-bar-dropdown main-nav-bar-category">
-        <%= link_to root[:title], root[:url], class: "p-2 main-nav-bar-item main-nav-bar-category-button" %>
-        <% if root[:items].present? || root[:promo_banners].present? %>
-          <div class="w-100 shadow main-nav-bar-category-dropdown">
+      <li class="p-0 nav-item main-nav-bar-category">
+        <% has_dropdown = root[:items].present? || root[:promo_banners].present? %>
+        <%= link_to root[:title], root[:url], class: "nav-link dropdown-toggle main-nav-bar-item main-nav-bar-category-button",  'data-toggle': "dropdown", 'aria-haspopup': true, 'aria-expanded': false %>
+        <% if has_dropdown %>
+          <div class="dropdown-menu w-100 shadow main-nav-bar-category-dropdown">
             <div class="container p-0 d-flex justify-content-xl-around mx-auto">
               <% if root[:items].present? %>
                 <div class="row">
@@ -17,7 +18,7 @@
                     <ul class="pl-0">
                       <% root[:items].each do |item| %>
                         <li>
-                          <%= link_to item[:title], item[:url], class: "text-uppercase main-nav-bar-category-links" %>
+                          <%= link_to item[:title], item[:url], class: "text-uppercase main-nav-bar-category-links dropdown-item" %>
                         </li>
                       <% end %>
                     </ul>
@@ -25,7 +26,7 @@
                 <% end %>
                 <% if root[:promo_banners].present? %>
                   <% root[:promo_banners].each do |promo_banner| %>
-                    <%= link_to promo_banner[:url] do %>
+                    <%= link_to promo_banner[:url], class: "dropdown-item" do %>
                       <div class="category-image text-center mx-3">
                         <%= main_nav_image(promo_banner[:image], promo_banner[:title]) %>
                         <div class="category-box">
