--- a/frontend/app/views/spree/shared/_main_nav_bar.html.erb
+++ b/frontend/app/views/spree/shared/_main_nav_bar.html.erb
@@ -3,7 +3,10 @@
     <% spree_navigation_data.each do |root| %>
       <li class="p-0 nav-item main-nav-bar-category">
         <% has_dropdown = root[:items].present? || root[:promo_banners].present? %>
-        <%= link_to root[:title], root[:url], class: "nav-link dropdown-toggle main-nav-bar-item main-nav-bar-category-button",  'data-toggle': "dropdown", 'aria-haspopup': true, 'aria-expanded': false %>
+        <% dropdown_toggle_class = has_dropdown ? "dropdown-toggle" : "" %>
+        <% data_attr = has_dropdown ? { toggle: "dropdown" } : {} %>
+        <% aria_attr = has_dropdown ? { haspopup: true, expanded: false } : {} %>
+        <%= link_to root[:title], root[:url], class: "nav-link main-nav-bar-item main-nav-bar-category-button #{dropdown_toggle_class}",  data: data_attr, aria: aria_attr %>
         <% if has_dropdown %>
           <div class="dropdown-menu w-100 shadow main-nav-bar-category-dropdown">
             <div class="container p-0 d-flex justify-content-xl-around mx-auto">
