--- a/frontend/app/assets/stylesheets/spree/frontend/components-custom/inputs.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/components-custom/inputs.scss
@@ -83,7 +83,16 @@
   }
 
   input[type="checkbox"] {
-    display: none;
+    opacity: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
+
+  input[type="checkbox"]:focus + label {
+    border-color: $primary-color;
   }
 
   label {
