--- a/frontend/app/views/spree/shared/_login.html.erb
+++ b/frontend/app/views/spree/shared/_login.html.erb
@@ -17,7 +17,7 @@
     <% if Spree::Frontend::Config[:remember_me_enabled] %>
       <div class="spree-checkbox-container mt-4 mt-sm-5 mt-lg-4 spree-mb-medium">
         <div class="spree-checkbox">
-          <%= f.check_box :remember_me, tabindex: 3 %>
+          <%= f.check_box :remember_me %>
           <%= f.label :remember_me, '' %>
         </div>
 
@@ -25,7 +25,7 @@
       </div>
     <% end %>
 
-    <%= f.submit Spree.t(:log_in), class: 'btn btn-primary btn-block spree-btn mt-2', tabindex: 4 %>
+    <%= f.submit Spree.t(:log_in), class: 'btn btn-primary btn-block spree-btn mt-2' %>
   <% end %>
 
   <% if spree.respond_to?(:recover_password_path) %>
