--- a/frontend/app/views/spree/products/_filters_desktop.html.erb
+++ b/frontend/app/views/spree/products/_filters_desktop.html.erb
@@ -5,8 +5,9 @@
         <div class="w-100 card plp-filters-card">
           <% ot_downcase_name = option_type.filter_param %>
           <% option_type_name = ot_downcase_name.titleize %>
+          <% collapsed = params[ot_downcase_name].blank? %>
 
-          <div class="card-header <%= 'collapsed' if params[ot_downcase_name].blank? %> px-1 plp-filters-card-header" id="filters<%= option_type_name %>" data-toggle="collapse" data-target="#collapseFilter<%= option_type_name %>" aria-expanded="false" aria-controls="collapseFilter<%= option_type_name %>" role="heading" aria-level="2">
+          <button class="card-header <%= 'collapsed' if collapsed %> px-1 plp-filters-card-header" id="filters<%= option_type_name %>" data-toggle="collapse" data-target="#collapseFilter<%= option_type_name %>" aria-expanded="<%= !collapsed %>" aria-controls="collapseFilter<%= option_type_name %>" role="heading" aria-level="2">
             <%= option_type.presentation %>
             <%= icon(name: 'plus',
                     classes: 'mt-1 float-right arrow plp-filters-card-header-arrow--plus',
@@ -16,8 +17,8 @@
                     classes: 'mt-1 float-right arrow plp-filters-card-header-arrow--minus',
                     width: 16,
                     height: 16) %>
-          </div>
-          <div id="collapseFilter<%= option_type_name %>" class="collapse <%= 'show' unless params[ot_downcase_name].blank? %>" aria-labelledby="filters<%= option_type_name %>">
+          </button>
+          <div id="collapseFilter<%= option_type_name %>" class="collapse <%= 'show' unless collapsed %>" aria-labelledby="filters<%= option_type_name %>">
             <div class="card-body px-0 pt-1">
               <%= render 'spree/shared/option_values',
                 params_ot_downcase_name: params[ot_downcase_name],
@@ -29,9 +30,9 @@
           </div>
         </div>
       <% end %>
-
+      <% price_collapsed = params[:price].blank? %>
       <div class="w-100 card plp-filters-card">
-        <div class="card-header text-capitalize <%= 'collapsed' if params[:price].blank? %> px-1 plp-filters-card-header" id="filtersPrice" data-toggle="collapse" data-target="#collapseFilterPrice" aria-expanded="false" aria-controls="collapseFilterPrice" role="heading" aria-level="2">
+        <button class="card-header text-capitalize <%= 'collapsed' if price_collapsed %> px-1 plp-filters-card-header" id="filtersPrice" data-toggle="collapse" data-target="#collapseFilterPrice" aria-expanded="<% !price_collapsed %>" aria-controls="collapseFilterPrice" role="heading" aria-level="2">
           <%= Spree.t('plp.price') %>
           <%= icon(name: 'plus',
                   classes: 'mt-1 float-right arrow plp-filters-card-header-arrow--plus',
@@ -41,8 +42,8 @@
                   classes: 'mt-1 float-right arrow plp-filters-card-header-arrow--minus',
                   width: 16,
                   height: 16) %>
-        </div>
-        <div id="collapseFilterPrice" class="collapse <%= 'show' unless params[:price].blank? %>" aria-labelledby="filtersPrice">
+        </button>
+        <div id="collapseFilterPrice" class="collapse <%= 'show' unless price_collapsed %>" aria-labelledby="filtersPrice">
           <div class="card-body px-0 pt-1">
             <% price_filter_values.each do |name| %>
               <% price_param = params[:price] == name ? '' : name %>
