--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/cart_form.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/cart_form.scss
@@ -92,6 +92,9 @@
             border-color: theme-color("dark-text");
           }
         }
+        &:focus + label {
+          outline: theme-color("dark-text") dotted 2px;
+        }
         &--bad-combination {
           & + #{$self2}-label {
             position: relative;
