WCAG-15 Use snake case instead of camel case in 2 missing occurencies

--- a/frontend/app/views/spree/checkout/_delivery_informations.html.erb
+++ b/frontend/app/views/spree/checkout/_delivery_informations.html.erb
@@ -1,4 +1,4 @@
-<div class="checkout-confirm-delivery-informations text-left mt-3 <%= className %>">
+<div class="checkout-confirm-delivery-informations text-left mt-3 <%= class_name %>">
   <div class="d-lg-none checkout-confirm-delivery-informations-header">
     <%= Spree.t(:delivery_information) %>
   </div>
