--- a/frontend/app/views/spree/checkout/_confirm.html.erb
+++ b/frontend/app/views/spree/checkout/_confirm.html.erb
@@ -3,7 +3,7 @@
     <%= Spree.t(:summary).upcase %>
   </p>
   <div class='checkout-confirm-order-details d-flex flex-column flex-lg-wrap' id="order_summary" data-hook>
-    <%= render partial: 'spree/checkout/delivery_informations', locals: { className: 'd-none d-lg-block' } %>
+    <%= render partial: 'spree/checkout/delivery_informations', locals: { class_name: 'd-none d-lg-block' } %>
     <div class="checkout-confirm-order-details-line-items d-flex flex-column align-items-center w-100">
       <div class="checkout-confirm-order-details-line-items-header d-none d-sm-block d-lg-none align-self-start mb-3">
         <%= Spree.t(:products) %>
