Change container elements from p to div & add stying to state select

--- a/frontend/app/views/spree/checkout/_address.html.erb
+++ b/frontend/app/views/spree/checkout/_address.html.erb
@@ -3,12 +3,12 @@
 <% if !try_spree_current_user || try_spree_current_user.email.blank? %>
   <div class="row">
     <div class="col-12 mb-4">
-      <p class="form-group checkout-content-inner-field">
+      <div class="form-group checkout-content-inner-field">
         <%= form.label :email, class: 'text-uppercase' %>
         <span class="required">*</span>
         <br />
         <%= form.email_field :email, class: 'required spree-flat-input', required: true %>
-      </p>
+      </div>
     </div>
   </div>
 <% end %>
