--- a/emails/app/views/spree/shared/_base_mailer_stylesheets.html.erb
+++ b/emails/app/views/spree/shared/_base_mailer_stylesheets.html.erb
@@ -107,7 +107,7 @@
     border-bottom: 10px solid #3869D4;
     border-left: 18px solid #3869D4;
     display: inline-block;
-    color: #FFF;
+    color: #FFF !important;
     text-decoration: none;
     border-radius: 3px;
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.16);
