Fix extension generation.

--- a/cli/lib/spree_cli/templates/extension/lib/%file_name%.rb.tt
+++ b/cli/lib/spree_cli/templates/extension/lib/%file_name%.rb.tt
@@ -2,3 +2,4 @@ require 'spree_core'
 require 'spree_extension'
 require '<%=file_name%>/engine'
 require '<%=file_name%>/version'
+require '<%=file_name%>/configuration'
