--- a/cli/lib/spree_cli/templates/extension/lib/%file_name%/configuration.rb.tt
+++ b/cli/lib/spree_cli/templates/extension/lib/%file_name%/configuration.rb.tt
@@ -2,9 +2,9 @@ module <%= class_name %>
   class Configuration < Spree::Preferences::Configuration
 
    # Some example preferences are shown below, for more information visit:
-   # https://docs.spreecommerce.org/developer/customization
+   # https://docs.spreecommerce.org/developer/contributing/creating-an-extension
 
-   preference :enabled, :boolean, default: true
+   # preference :enabled, :boolean, default: true
    # preference :dark_chocolate, :boolean, default: true
    # preference :color, :string, default: 'Red'
    # preference :favorite_number, :integer
