Fix custom authentication generators and update docs

--- a/core/lib/generators/spree/custom_authentication/templates/authentication_helpers.rb.tt
+++ b/core/lib/generators/spree/custom_authentication/templates/authentication_helpers.rb.tt
@@ -1,14 +1,4 @@
 module Spree
-  module CurrentUserHelpers
-    def self.included(receiver)
-      receiver.send :helper_method, :spree_current_user
-    end
-
-    def spree_current_user
-      current_user
-    end
-  end
-
   module AuthenticationHelpers
     def self.included(receiver)
       receiver.send :helper_method, :spree_login_path
@@ -30,7 +20,4 @@ module Spree
   end
 end
 
-ApplicationController.include Spree::AuthenticationHelpers
-ApplicationController.include Spree::CurrentUserHelpers
-
-Spree::Api::BaseController.include Spree::CurrentUserHelpers
+ApplicationController.include Spree::AuthenticationHelpers if defined?(ApplicationController)
