--- a/core/app/views/spree/export_mailer/export_done.html.erb
+++ b/core/app/views/spree/export_mailer/export_done.html.erb
@@ -1,5 +1,5 @@
 <h1>
-  <%= Spree.t('export_mailer.greeting', user_name: @export.user&.firstname) %>
+  <%= Spree.t('export_mailer.greeting', user_name: @export.user&.first_name) %>
 </h1>
 <p>
   <%= Spree.t('export_mailer.export_done.message') %>
