--- a/admin/app/views/layouts/spree/admin.html.erb
+++ b/admin/app/views/layouts/spree/admin.html.erb
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="<%= I18n.locale %>">
   <head>
+    <%= javascript_importmap_tags 'application-spree-backend' %>
   </head>
   <body class="admin min-vh-100 <%= controller_name %> <%= action_name %>" data-controller="spree">
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-lg-3 col-xl-2 d-none d-lg-block position-relative px-2">
-          <%= render 'spree/admin/shared/sidebar' %>
+          <%#= render 'spree/admin/shared/sidebar' %>
         </div>
         <div class="col-lg-9 col-xl-10 px-0 pb-5 mb-3 pt-lg-2">
           <main id="content" class="container">
