--- a/admin/app/views/spree/admin/shared/_returns_and_refunds_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/_returns_and_refunds_nav.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:page_title) do %>
-  Returns & Refunds
+  <%= Spree.t(:returns) %> & <%= Spree.t(:refunds) %>
 <% end %>
 
 <% content_for(:page_tabs) do %>
